Issue #13588 - Improve ResourceFactory.split() and URIUtil.toURI to work properly on Windows.
+ New testcases in ResourceFactoryTest.testResourceSplit*
+ Restore URIUtil.toURI(String) for
  the purpose of converting a raw string
  reference to a URI without causing
  a Resource mount to occur.